--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -7,8 +7,8 @@
 
     <link rel="shortcut icon" href="https://www.ccsa.ufrn.br/portal/wp-content/uploads/2014/08/favicon.fw_.png"/>
 
-    <link rel="stylesheet" type="text/css" href="/static/content/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap3/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/site.css" />
     <!-- <script src="/static/scripts/modernizr-2.6.2.js"></script> -->
 </head>
 
@@ -59,9 +59,8 @@
         </footer>
     </div>
 
-    <script src="/static/scripts/jquery-1.10.2.js"></script>
-    <script src="/static/scripts/bootstrap.js"></script>
-    <script src="/static/scripts/respond.js"></script>
+    <script src="/static/jquery3/jquery-3.1.1.js"></script>
+    <script src="/static/bootstrap3/js/bootstrap.js"></script>
     {% block scripts %}{% endblock %}
 
 </body>
