Init the concept of separated envs for each program

--- a/MinervaEnv/Minerva/templates/layout.html
+++ b/MinervaEnv/Minerva/templates/layout.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minerva{{ ': ' ~ program.name }} (UFRN)</title>
+    <title>Minerva {% if program %} {{ ': ' ~ program.name }} {% endif %} (UFRN)</title>
+
 
     <link rel="shortcut icon" href="https://www.ccsa.ufrn.br/portal/wp-content/uploads/2014/08/favicon.fw_.png"/>
 
     <link rel="stylesheet" type="text/css" href="/static/bootstrap3/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/site.css" />
-    <!-- <script src="/static/scripts/modernizr-2.6.2.js"></script> -->
+    
 </head>
 
 <body>
@@ -21,31 +22,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">{{ program.initials }}</a>
+                <a href="/" class="navbar-brand">{% if program %} {{ program.initials }} {% else %} Minerva {% endif %}</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('home') }}"> Início </a></li>
+                    <li><a href="{{ url_for('page_not_found') }}"> Início </a></li>
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Estrutura <span class="caret"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('home') }}">Linhas de pesquisa</a></li>
-                            <li><a href="{{ url_for('home') }}">Disciplinas</a></li>
-                            <li><a href="{{ url_for('home') }}">Infraestrutura</a></li>
-                            <li><a href="{{ url_for('home') }}">Integração</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Linhas de pesquisa</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Disciplinas</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Infraestrutura</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Integração</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Equipe <span class="caret"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('home') }}">Administradores</a></li>
-                            <li><a href="{{ url_for('home') }}">Docentes</a></li>
-                            <li><a href="{{ url_for('home') }}">Estudantes</a></li>
-                            <li><a href="{{ url_for('home') }}">Projetos de pesquisa</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Administradores</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Docentes</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Estudantes</a></li>
+                            <li><a href="{{ url_for('page_not_found') }}">Projetos de pesquisa</a></li>
                         </ul>
                     </li>
-                    <li><a href="{{ url_for('home') }}"> Calendário </a></li>
-                    <li><a href="{{ url_for('home') }}"> Documentos </a></li>
+                    <li><a href="{{ url_for('page_not_found') }}"> Calendário </a></li>
+                    <li><a href="{{ url_for('page_not_found') }}"> Documentos </a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('page_not_found') }}"> Portal do CCSA </a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        Mais Pós-Graduações <span class="caret"></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ url_for('page_not_found') }}">Gestão Pública</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="{{ url_for('page_not_found') }}"> Acesso Privado </a></li>
                 </ul>
             </div>
         </div>
