--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -17,18 +17,23 @@
     </ol>
 
     <div class="carousel-inner" role="listbox">
+        
         <div class="item active">
-            <img class="first-slide" src="static/assets/office_lady_using_laptop_holding_smartphone_and_coffe.jpg" alt="First slide">
+            <img class="first-slide" src="static/assets/office_lady_using_laptop_holding_smartphone_and_coffe.jpg" 
+            alt="Primeiro quadro: mulher no escritório usando laptop e segurando um smartphone e um café na mão.">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Programa de Pós-Graduação em <strong>{{ program.name }}</strong>.</h1>
-                    <p>
-                        Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar instituições governamentais.
-                    </p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Ver os egressos &raquo;</a></p>
+                    <div class="carousel-caption-content">
+                        <h1>Programa de Pós-Graduação em<br/><strong>{{ program.name }}</strong>.</h1>
+                        <p>
+                            Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar em instituições governamentais.
+                        </p>
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Ver os egressos &raquo;</a></p>
+                    </div>
                 </div>
             </div>
         </div>
+
         <div class="item">
             <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
             <div class="container">
@@ -39,6 +44,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="item">
             <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
             <div class="container">
@@ -49,6 +55,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
