Deactivate other slides visibilities

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -28,12 +28,12 @@
                         <p>
                             Stricto sensu: o Mestrado Profissional em Gestão Pública prepara dirigentes para atuar em instituições governamentais.
                         </p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Ver os egressos &raquo;</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="{{ url_for('page_not_found') }}" role="button">Quem são os egressos? &raquo;</a></p>
                     </div>
                 </div>
             </div>
         </div>
-
+<!--
         <div class="item">
             <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
             <div class="container">
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </div>
-
+-->
     </div>
 
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
