--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -76,6 +76,30 @@
 
     <div class="col-md-4">
         <h2>Atendimento</h2>
+        <style>
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+        </style>
+        <div id="map"></div>
+        <script>
+        function initMap() {
+            var uluru = {lat: -25.363, lng: 131.044};
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 4,
+                center: uluru
+            });
+            var marker = new google.maps.Marker({
+                position: uluru,
+                map: map
+            });
+        }
+        </script>
+        <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap">
+        </script>
+        
         <p>The Python Package Index is a repository of software for the Python programming language.</p>
         <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
     </div>
