Refactor google maps codes (plus:  indicate where is CCSA)

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -76,25 +76,8 @@
 
     <div class="col-md-4">
         <h2>Atendimento</h2>
-        <style>
-        #map {
-            height: 400px;
-            width: 100%;
-        }
-        </style>
         <div id="map"></div>
         <script>
-        function initMap() {
-            var uluru = {lat: -25.363, lng: 131.044};
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
-                center: uluru
-            });
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
-            });
-        }
         </script>
         <script async defer
             src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap">
@@ -118,4 +101,22 @@
 
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+    function initMap() {
+        var location = { lat: -5.8379134, lng: -35.1983559 }; /* Default location for CCSA */
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 17,
+            center: location
+        });
+
+        var marker = new google.maps.Marker({
+            position: location,
+            map: map
+        });
+    }
+</script>
 {% endblock %}
