--- a/MinervaEnv/Minerva/static/css/general.css
+++ b/MinervaEnv/Minerva/static/css/general.css
@@ -27,6 +27,14 @@ body {
     font-weight: bold;
 }
 
+/* GOOGLE MAPS API
+-------------------------------------------------- */
+
+#map {
+    height: 400px;
+    width: 100%;
+}
+
 /* FOOTER
 -------------------------------------------------- */
 
