--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -76,27 +76,21 @@
 
     <div class="col-md-4">
         <h2>Atendimento</h2>
-        <div id="map"></div>
-        <script>
-        </script>
-        <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap">
-        </script>
-        
+        <div id="map"><!-- Google Maps API. --></div>
         <p>The Python Package Index is a repository of software for the Python programming language.</p>
         <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
     </div>
     
     <div class="col-md-4">
         <h2>Trabalhos de Conclusão</h2>
-        <p>You can easily publish to Microsoft Azure using Python Tools for Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
+        <p>The Python Package Index is a repository of software for the Python programming language.</p>
+        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
     </div>
     
     <div class="col-md-4">
         <h2>Processos Seletivos</h2>
-        <p>You can easily publish to Microsoft Azure using Python Tools for Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
+        <p>The Python Package Index is a repository of software for the Python programming language.</p>
+        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
     </div>
 
 </div>
@@ -104,9 +98,10 @@
 {% endblock %}
 
 {% block scripts %}
+
 <script>
     function initMap() {
-        var location = { lat: -5.8379134, lng: -35.1983559 }; /* Default location for CCSA */
+        var location = { lat: -5.8379134, lng: -35.1983559 }; /* Default location for CCSA administrative building */
 
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 17,
@@ -119,4 +114,7 @@
         });
     }
 </script>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap"></script>
+
 {% endblock %}
