Add 'atendimento' section, implement some semantic

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -74,24 +74,42 @@
 
 <div class="row">
 
-    <div class="col-md-4">
-        <h2>Atendimento</h2>
+    <section class="col-md-4">
+        <header>
+            <h2>Atendimento</h2>
+        </header>
+        <p>
+            <span>Horários: </span> Segunda à Sexta-Feira<br/>(08:00 às 11:30 ou 13:30 às 17:00).<br/>
+            <span>E-mail:</span> <a href="mailto:ppgp.ufrn@gmail.com">ppgp.ufrn@gmail.com</a>.<br/>
+            <span>Telefone 1:</span> +55 84 3342-2288 (Ramal 182)<br/>
+            <span>Telefone 2:</span> +55 84 9 9474-6765<br/>
+        </p>
         <div id="map"><!-- Google Maps API. --></div>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
-    </div>
+        <p>
+            <address>
+                <span>Endereço 1:</span> Sen. Salgado Filho, 3000, Lagoa Nova, Natal/RN, CEP 59078-970.<br/>
+                <span>Endereço 2:</span> Campus Universitário Central, Prédio Administrativo do CCSA.<br/>
+                <span>Sala:</span> A22, Térreo.<br/>
+            </address>
+        </p>
+    </section>
     
-    <div class="col-md-4">
-        <h2>Trabalhos de Conclusão</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
-    </div>
+    <section class="col-md-4">
+        <header>
+            <h2>Trabalhos de Conclusão</h2>
+        </header>
+            <p>The Python Package Index is a repository of software for the Python programming language.</p>
+            <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
+        </header>
+    </section>
     
-    <div class="col-md-4">
-        <h2>Processos Seletivos</h2>
+    <section class="col-md-4">
+        <header>
+            <h2>Processos Seletivos</h2>
+        </header>
         <p>The Python Package Index is a repository of software for the Python programming language.</p>
         <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
-    </div>
+    </section>
 
 </div>
 
