Update blue colors

--- a/MinervaEnv/Minerva/static/css/general.css
+++ b/MinervaEnv/Minerva/static/css/general.css
@@ -19,7 +19,7 @@ section span{
 
 section header h2{
     padding-left: 5px;
-    background-color: #3A539B;
+    background-color: #063E5F;
     color: #FFF;
 }
 
