Add a logo to 'atendimento' section and reorganize some txt

--- a/MinervaEnv/Minerva/static/css/carousel.css
+++ b/MinervaEnv/Minerva/static/css/carousel.css
@@ -28,7 +28,7 @@
     background-color: #22313F;
 }
 
-.carousel .item {
+.carousel-inner > .item {
     /* Declare heights because of positioning of img element */
     height: 500px;
     background-color: #777;
