--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -78,18 +78,21 @@
         <header>
             <h2>Atendimento</h2>
         </header>
+        <img src="static/assets/logo_ppgp.png" alt="Gestão Pública" class="program-logo center-block" width="200">
         <p>
-            <span>Horários: </span> Segunda à Sexta-Feira<br/>(08:00 às 11:30 ou 13:30 às 17:00).<br/>
-            <span>E-mail:</span> <a href="mailto:ppgp.ufrn@gmail.com">ppgp.ufrn@gmail.com</a>.<br/>
+            <span>Sala:</span> Administração do CCSA, Térreo, Ala A, Sala 04.<br/>
+            <span>Horários: </span> Segunda à Sexta-Feira (08:00 às 11:30 e 13:30 às 17:00).<br/>
+            <span>E-mail:</span> <a href="mailto:ppgp.ufrn@gmail.com">ppgp.ufrn@gmail.com</a><br/>
             <span>Telefone 1:</span> +55 84 3342-2288 (Ramal 182)<br/>
             <span>Telefone 2:</span> +55 84 9 9474-6765<br/>
         </p>
         <div id="map"><!-- Google Maps API. --></div>
         <p>
             <address>
-                <span>Endereço 1:</span> Sen. Salgado Filho, 3000, Lagoa Nova, Natal/RN, CEP 59078-970.<br/>
-                <span>Endereço 2:</span> Campus Universitário Central, Prédio Administrativo do CCSA.<br/>
-                <span>Sala:</span> A22, Térreo.<br/>
+                <span>Endereço 1:</span>
+                Brasil, Natal (RN), CEP 59078-970, Lagoa Nova, Av. Sen. Salgado Filho, 3000.<br/>
+                <span>Endereço 2:</span>
+                Campus Universitário Central, Prédio Administrativo do CCSA.<br/>
             </address>
         </p>
     </section>
