Add 'trabalhos de conclusao' section

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -3,6 +3,7 @@
 {% block styles %}
 
 <link rel="stylesheet" type="text/css" href="/static/css/carousel.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/schedule.css" />
 
 {% endblock %}
 
@@ -101,8 +102,70 @@
         <header>
             <h2>Trabalhos de Conclusão</h2>
         </header>
-            <p>The Python Package Index is a repository of software for the Python programming language.</p>
-            <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
+            <p>Cronograma recente para apresentações públicas de conclusão dos alunos do Programa diante de uma banca examinadora.</p>
+            <table class="schedule-table">
+                <tr class="schedule-container">
+                    <td class="schedule-container-date">
+                        <ul>
+                            <li class="schedule-date-day">17</li>
+                            <li class="schedule-date-month">FEV</li>
+                            <li class="schedule-date-year">2017</li>
+                        </ul>
+                    </td>
+                    <td class="schedule-container-info">
+                        <h4>A percepção de alunos com deficiência sobre a gestão para a inclusão: o caso IFPB - Campus João Pessoa
+                            <br/>
+                            <small>Giorginone Mendes Ribeiro Júnior</small>
+                        </h4>
+                        <p>
+                            Local: Setor V, Sala D4<br/>
+                            Horário: 14:00<br/>
+                        </p>
+                    </td>
+                </tr>
+                <!-- TO REMOVE -->
+                <tr class="schedule-container">
+                    <td class="schedule-container-date">
+                        <ul>
+                            <li class="schedule-date-day">17</li>
+                            <li class="schedule-date-month">FEV</li>
+                            <li class="schedule-date-year">2017</li>
+                        </ul>
+                    </td>
+                    <td class="schedule-container-info">
+                        <h4>Transparência pública: análise sobre as práticas dos Institutos Federais de Educação, Ciência e Tecnologia
+                            <br/>
+                            <small>Luzivan Jose da Silva</small>
+                        </h4>
+                        <p>
+                            Local: Setor V, Sala D4<br/>
+                            Horário: 09:00<br/>
+                        </p>
+                    </td>
+                </tr>
+
+                <tr class="schedule-container">
+                    <td class="schedule-container-date">
+                        <ul>
+                            <li class="schedule-date-day">10</li>
+                            <li class="schedule-date-month">FEV</li>
+                            <li class="schedule-date-year">2017</li>
+                        </ul>
+                    </td>
+                    <td class="schedule-container-info">
+                        <h4>A institucionalização da sustentabilidade no Instituto Federal de Educação, Ciência e Tecnologia da Paraíba: o caso João Pessoa
+                            <br/>
+                            <small>Leonardo Freire de Mendonça Soares</small>
+                        </h4>
+                        <p>
+                            Local: Setor V, Sala D4<br/>
+                            Horário: 14:00<br/>
+                        </p>
+                    </td>
+                </tr>
+                <!-- / -->
+            </table>
+            <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Ver histórico &raquo;</a></p>
         </header>
     </section>
     
