Modularize css for a certain academic field

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="/static/css/carousel.css" />
 <link rel="stylesheet" type="text/css" href="/static/css/schedule.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/ppgp.css" />
 
 {% endblock %}
 
