Pull a btn to the right, and minimize some text

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -82,7 +82,7 @@
         </header>
         <img src="static/assets/logo_ppgp.png" alt="Gestão Pública" class="program-logo center-block" width="200">
         <p>
-            <span>Sala:</span> Administração do CCSA, Térreo, Ala A, Sala 04.<br/>
+            <span>Sala:</span> Administração do CCSA, Térreo, Ala A, Sala 10.<br/>
             <span>Horários: </span> Segunda à Sexta-Feira (08:00 às 11:30 e 13:30 às 17:00).<br/>
             <span>E-mail:</span> <a href="mailto:ppgp.ufrn@gmail.com">ppgp.ufrn@gmail.com</a><br/>
             <span>Telefone 1:</span> +55 84 3342-2288 (Ramal 182)<br/>
@@ -103,7 +103,7 @@
         <header>
             <h2>Trabalhos de Conclusão</h2>
         </header>
-            <p>Cronograma recente para apresentações públicas de conclusão dos alunos do Programa diante de uma banca examinadora.</p>
+            <p>Apresentações públicas dos discentes diante de suas bancas examinadoras.</p>
             <table class="schedule-table">
                 <tr class="schedule-container">
                     <td class="schedule-container-date">
@@ -166,7 +166,7 @@
                 </tr>
                 <!-- / -->
             </table>
-            <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Ver histórico &raquo;</a></p>
+            <p><a class="btn btn-default pull-right" href="{{ url_for('page_not_found') }}">Ver mais &raquo;</a></p>
         </header>
     </section>
     
@@ -175,7 +175,7 @@
             <h2>Processos Seletivos</h2>
         </header>
         <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="{{ url_for('page_not_found') }}">Learn more &raquo;</a></p>
     </section>
 
 </div>
