Fix a responsivity bug: a pulled-left btn was being hidden due to float right property

--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -166,7 +166,7 @@
                 </tr>
                 <!-- / -->
             </table>
-            <p><a class="btn btn-default pull-right" href="{{ url_for('page_not_found') }}">Ver mais &raquo;</a></p>
+            <p><a class="btn btn-default center-block" href="{{ url_for('page_not_found') }}">Ver cronograma inteiro &raquo;</a></p>
         </header>
     </section>
     
