--- a/MinervaEnv/Minerva/templates/index.html
+++ b/MinervaEnv/Minerva/templates/index.html
@@ -174,8 +174,35 @@
         <header>
             <h2>Processos Seletivos</h2>
         </header>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="{{ url_for('page_not_found') }}">Learn more &raquo;</a></p>
+        <h4>Mestrado (15 vagas):
+            <br/>
+            <small>(10/03/2017 à 05/06/2017)</small>
+        </h4>
+        <!-- como participa, etapa atual, do que precisa -->
+        <ul>
+            <li><span>Status:</span> <span style="color: green">Aguardando submissões</span></li>
+            <li><span>Quadro de vagas por instituição:</span> 
+                <ul>
+                    <li>"Público geral" (0 vagas)</li>
+                    <li>UFRN (5 vagas)</li>
+                    <li>IFPA (5 vagas)</li>
+                    <li>IFRN (5 vagas)</li>
+                </ul>
+            </li>
+            <li><span>Documentos necessários:</span> 
+                <ul>
+                    <li>Comprovante do resultado do teste da ANPAD realizados a partir de fevereiro de 2015</li>
+                    <li>Cópia do Anteprojeto de Proposta de Intervenção ou do Anteprojeto de Dissertação de Mestrado</li>
+                    <li>Carta de anuência emitida pela instituição conveniada autorizando o candidato a participação no processo seletivo</li>
+                </ul>
+            </li>
+            <li><span>Como participar:</span>
+                Realizar sua inscrição online através do site do SIGAA (http://www.sigaa.ufrn.br), na
+                opção Processos Seletivos - STRICTO SENSU, clicar no link Mestrado Profissional em
+                Gestão Pública. No processo de inscrição o candidato deverá anexar os documentos.
+            </li>
+        </ul>
+        <p><a class="btn btn-default center-block" href="{{ url_for('page_not_found') }}">Baixar edital &raquo;</a></p>
     </section>
 
 </div>
